<resources>
    <string name="app_name">NoblePeople</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed_to_register">Proceed to Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="about_noble_people">Noble People International Magazine is a medium set up on a platform where everybody around the globe is entitled to affordable placement of Advertisement.</string>
    <string name="africans">Africans…</string>
    <string name="for_the">for the</string>
    <string name="magazine">Magazine</string>
    <string name="magazine_cover_image">magazine cover image</string>
</resources>